--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy-middleware": "^3.0.3",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-click-away-listener": "^2.2.4",
