--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-click-away-listener": "^2.2.4",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
