--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "proxy": "https://flight-api-rdtr.onrender.com/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -39,7 +35,7 @@
     "start": "serve -s build",
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint --fix",
     "prepare": "husky install"
@@ -64,17 +60,27 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/http-proxy-middleware": "^1.0.0",
+    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "husky": "^9.1.7",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.1",
     "sass": "^1.81.0",
+    "ts-node": "^10.9.2",
     "typescript-eslint": "^8.16.0"
   }
 }
