--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "test:e2e": "playwright test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix",
     "prepare": "husky install"
@@ -67,6 +68,7 @@
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
+    "@types/redux-mock-store": "^1.5.0",
     "@types/testing-library__jest-dom": "^6.0.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -74,12 +76,15 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "husky": "^9.1.7",
-    "jest": "^27.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.1",
+    "redux-mock-store": "^1.5.5",
     "sass": "^1.81.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript-eslint": "^8.16.0"
   }
